force-app/main/default/objects/Animal__c/fields/Average_life_age__c.field-meta.xml
<CustomField>
    <fullName>Average_life_age__c</fullName>
    <description>Tiempo de vida aproximado</description>
    <label>Average life age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>