force-app/main/default/objects/Animal__c/fields/Date_of_birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_birth__c</fullName>
    <description>Fecha de nacimiento</description>
    <label>Date of birth</label>
    <required>true</required>
    <type>Date</type>
</CustomField>