force-app/main/default/objects/Animal__c/fields/Feeding__c.field-meta.xml
<CustomField>
    <fullName>Feeding__c</fullName>
    <label>Feeding</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carnívoros</fullName>
                <default>true</default>
                <label>Carnívoros</label>
            </value>
            <value>
                <fullName>Herbívoros</fullName>
            </value>
            <value>
                <fullName>Insectívoros</fullName>
            </value>
            <value>
                <fullName>Omnívoros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>