force-app/main/default/objects/Animal__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tierra</fullName>
            </value>
            <value>
                <fullName>Agua</fullName>
            </value>
            <value>
                <fullName>Aire</fullName>
            </value>
            <value>
                <fullName>Jaula</fullName>
            </value>
            <value>
                <fullName>Corral</fullName>
            </value>
            <value>
                <fullName>Pecera</fullName>
            </value>
            <value>
                <fullName>Pileta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>