force-app/main/default/objects/Animal__c/fields/Share_Place__c.field-meta.xml
<CustomField>
    <fullName>Share_Place__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcar si el animal puede compartir lugar con otros animales</description>
    <label>Share Place</label>
    <type>Checkbox</type>
</CustomField>