force-app/main/default/objects/Animal__c/fields/Specie__c.field-meta.xml
<CustomField>
    <fullName>Specie__c</fullName>
    <description>Tipo de especie del animal</description>
    <label>Specie</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mamíferos</fullName>
                <default>true</default>
                <label>Mamíferos</label>
            </value>
            <value>
                <fullName>Aves</fullName>
            </value>
            <value>
                <fullName>Reptiles</fullName>
            </value>
            <value>
                <fullName>Anfibios</fullName>
            </value>
            <value>
                <fullName>Peces</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>