force-app/main/default/objects/Animal__c/fields/Years__c.field-meta.xml
<CustomField>
    <fullName>Years__c</fullName>
    <description>Edad del animal</description>
    <label>Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>